test/scc_test/stmt/semantic-errors/000.a
000.t:3:5: error: a case statement may only be used within a switch